--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# Get this config using source-file ~/.conf/tmux.conf
+
 ###############################
 # Behaviour
 ###############################
