--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# Get this config using source-file ~/.conf/tmux.conf
+# Get this config with "source-file ~/.conf/tmux.conf"
 
 ###############################
 # Behaviour
